--- a/numpadTest.html
+++ b/numpadTest.html
@@ -1,11 +1,13 @@
 <html>
+
 <head>
-	<title>Учет сотрудников ООО "Лэм Уэстон Белая Дача"</title>
+	<title>Тест клавиатуры</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" href="css/numPad.css">
 <script type="text/javascript" src="app/jquery-main.js"></script>
-<script type="text/javascript" src="app/main.js"></script>
+<script type="text/javascript" src="app/mainTestNumPad.js"></script>
 
 <body>
 	<div id="container"></div>
@@ -22,9 +24,11 @@
 			<li>
 				<div id="exit" class="exit" onclick="createModal(this.id)"><span>Выход</span></div>
 			</li>
+
+
 		</ul>
 	</div>
+
 </body>
 
 </html>
-
